--- a/feedsidebar/chrome/locale/es/locale.properties
+++ b/feedsidebar/chrome/locale/es/locale.properties
@@ -1,3 +1,25 @@
+extensions.feedbar@efinke.com.description=Mostrar los elementos de Live Bookmarks en una barra de herramientas.
+feedbar.statusText=Actializando %S de %S (%S)...
+feedbar.noContent=Elemento sin contenido.
+feedbar.errors.unavailable=El Feed no esta disponible
+feedbar.errors.invalidFeed=Feed invalido.
+feedbar.errors.404=Feed no encontrado.
+feedbar.errors.noFeedsFound=No se encontrar Feeds.
+feedbar.errors.noFeedsFoundMore=Suscribete a una nueva fuente con la función Live Bookmark de Firefox para ver los elementos en la barra de herramientas.
+feedbar.errors.noFeedsFoundLabel=Mas informacion
 feedbar.errors.noFeedsFoundKey=M
+feedbar.errors.parseError=Error de lectura leyendo el Feed.
+feedbar.errors.invalidUrl=la URL no es una fuente válida
+feedbar.errors.viewFeed=Ver Feed
 feedbar.errors.viewFeed.key=V
+feedbar.unsubscribe=Darse de baja
 feedbar.unsubscribe.key=U
+feedbar.noSummary=Sin índice de contenido
+feedbar.warnOnTabs=Avisarme que abrir múltiples pestañas puede ralentizar la navegación.
+feedbar.warnOnTabsMessage=Estás a punto de abrir %S pestañas. Esto puede ralentizar la navegación mientras cargan las páginas. Estás seguro que quieres continuar?
+feedbar.confirmOpenInTabs=Confirmar Apertura
+feedbar.openConfirmText=Abrir pestañas
+feedbar.newItemBody=Un nuevo elemento
+feedbar.newItemsBody=%S nuevos elementos
+feedbar.workingOffline=Trabajar Offline
+feedbar.download=Descargar
