--- a/feedsidebar/chrome/locale/fa/locale.properties
+++ b/feedsidebar/chrome/locale/fa/locale.properties
@@ -1,3 +1,25 @@
+extensions.feedbar@efinke.com.description=نمایش موارد موجود در لایوبوکمارک شما در نوار کنار.
+feedbar.statusText=بروزرسانی %S از %S (%S)
+feedbar.noContent=خوراک بدون محتوا می باشد.
+feedbar.errors.unavailable=خوراک در دسترس نیست
+feedbar.errors.invalidFeed=خوراک خراب می باشد.
+feedbar.errors.404=خوراک یافت نشد.
+feedbar.errors.noFeedsFound=خوراکی یافت نشد.
+feedbar.errors.noFeedsFoundMore=عضویت در یک خوراک با استفاده از ویژگی لایو بوکمارک فایرفاکس برای مشاهده موارد خوراک در نوار کنار.
+feedbar.errors.noFeedsFoundLabel=اطلاعات بیشتر
 feedbar.errors.noFeedsFoundKey=M
+feedbar.errors.parseError=خطا در فشرده سازی خوراک.
+feedbar.errors.invalidUrl=آدرس خوراک نیست.
+feedbar.errors.viewFeed=مشاهده خوراک
 feedbar.errors.viewFeed.key=V
+feedbar.unsubscribe=لغو عضویت
 feedbar.unsubscribe.key=U
+feedbar.noSummary=هیچ خلاصه ای موجود نیست.
+feedbar.warnOnTabs=اگر با گشودن چندین تب مروگر من کند شد به من خبر بده
+feedbar.warnOnTabsMessage=شما تعداد %S تب را باز کرده اید. اینکار باعث کاهش سرعت بارگزاری صفحات شما می شود. آیا از ادامه کار مطمئنید؟
+feedbar.confirmOpenInTabs=تایید باز شدن
+feedbar.openConfirmText=گشودن تب ها
+feedbar.newItemBody=یک مورد جدید
+feedbar.newItemsBody=%S جدید
+feedbar.workingOffline=فعالیت آفلاین
+feedbar.download=دانلود
