Making all strings translateable.

--- a/feedsidebar/chrome/locale/en-US/locale.properties
+++ b/feedsidebar/chrome/locale/en-US/locale.properties
@@ -31,3 +31,6 @@ feedbar.time.hoursAgo=%S hours ago
 feedbar.time.minuteAgo=1 minute ago
 feedbar.time.minutesAgo=%S minutes ago
 feedbar.time.justNow=Less than a minute ago
+feedbar.tooltip.labeledFeed=Feed: %S
+feedbar.tooltip.labeledSite=Site: %S
+feedbar.truncatedString=%S...
