--- a/feedsidebar/chrome/locale/en-US/locale.properties
+++ b/feedsidebar/chrome/locale/en-US/locale.properties
@@ -1,5 +1,6 @@
 extensions.feedbar@efinke.com.description=Displays the items from your Live Bookmarks in a sidebar.
-feedbar.statusText=Updating %S of %S (%S)...
+# Example: Updating 7 of 15 (Example.com)
+feedbar.statusText=Updating %1$S of %2$S (%3$S)...
 feedbar.noContent=Feed has no content.
 feedbar.errors.unavailable=Feed is unavailable
 feedbar.errors.invalidFeed=Invalid feed.
@@ -16,6 +17,7 @@ feedbar.unsubscribe=Unsubscribe
 feedbar.unsubscribe.key=U
 feedbar.noSummary=No summary provided.
 feedbar.warnOnTabs=Warn me when opening multiple tabs might slow down the browser
+# The placeholder is a number greater than 1, and probably greater than 10.
 feedbar.warnOnTabsMessage=You are about to open %S tabs. This might slow down the browser while the pages are loading. Are you sure you want to continue?
 feedbar.confirmOpenInTabs=Confirm Open
 feedbar.openConfirmText=Open tabs
