Show the correct platform-specific modifier keys in the menu item for "Show Feed Sidebar" and update the localized access key strings.
Fixes #87.

--- a/feedsidebar/chrome/locale/bn-BD/locale.dtd
+++ b/feedsidebar/chrome/locale/bn-BD/locale.dtd
@@ -1,4 +1,4 @@
-<!ENTITY feedbar.accesskey "F">
+<!ENTITY feedbar.accesskey "Y">
 <!ENTITY feedbar.open "খুলুন">
 <!ENTITY feedbar.openInTab "নতুন ট্যাবে খুলুন">
 <!ENTITY feedbar.openAllInTabs "সবগুলো নতুন ট্যাবে খুলুন">
