--- a/feedsidebar/chrome/locale/ru/locale.dtd
+++ b/feedsidebar/chrome/locale/ru/locale.dtd
@@ -1,4 +1,4 @@
-<!ENTITY feedbar.accesskey "F">
+<!ENTITY feedbar.accesskey "Y">
 <!ENTITY feedbar.preview.markAsRead "Пометить фид или предмет прочитанным">
 <!ENTITY feedbar.open "Открыть">
 <!ENTITY feedbar.openInTab "Открыть в новой вкладке">
