--- a/feedsidebar/chrome/locale/tr-TR/locale.dtd
+++ b/feedsidebar/chrome/locale/tr-TR/locale.dtd
@@ -1,6 +1,6 @@
 <!ENTITY feedbar.buttonLabel "Beslemeler">
 <!ENTITY feedbar.sidebarTitle "Beslemeler">
-<!ENTITY feedbar.accesskey "F">
+<!ENTITY feedbar.accesskey "Y">
 <!ENTITY feedbar.open "Aç">
 <!ENTITY feedbar.openInTab "Yeni Sekmede Aç">
 <!ENTITY feedbar.openAllInTabs "Hepsini Yeni Sekmede Aç">
