--- a/feedsidebar/chrome/locale/fa-IR/locale.dtd
+++ b/feedsidebar/chrome/locale/fa-IR/locale.dtd
@@ -1,7 +1,7 @@
 <!ENTITY feedbar.buttonLabel "خوراک ها">
 <!ENTITY feedbar.sidebarTitle "خوراک ها">
 <!ENTITY feedbar.buttonTooltip "نمایش موارد موجود در لایوبوکمارک در نوار کنار">
-<!ENTITY feedbar.accesskey "F">
+<!ENTITY feedbar.accesskey "Y">
 <!ENTITY feedbar.preview.markAsRead "علامتگذاری خوراک یا گزینه به عنوان خوانده شده">
 <!ENTITY feedbar.open "بازکردن">
 <!ENTITY feedbar.openInTab "بازکردن در تب جدید">
