--- a/feedsidebar/chrome/locale/fr-FR/locale.dtd
+++ b/feedsidebar/chrome/locale/fr-FR/locale.dtd
@@ -1,7 +1,7 @@
 <!ENTITY feedbar.buttonLabel "Détail des flux non lus">
 <!ENTITY feedbar.sidebarTitle "Détail des flux non lus">
 <!ENTITY feedbar.buttonTooltip "Voir dans le panneau latéral les marque-pages dynamiques n'ayant pas été lus">
-<!ENTITY feedbar.accesskey "F">
+<!ENTITY feedbar.accesskey "Y">
 <!ENTITY feedbar.preview.markAsRead "Marquer le flux ou l'élément comme lu">
 <!ENTITY feedbar.open "Ouvrir">
 <!ENTITY feedbar.openInTab "Ouvrir dans un nouvel onglet">
