--- a/feedsidebar/chrome/locale/hu-HU/locale.dtd
+++ b/feedsidebar/chrome/locale/hu-HU/locale.dtd
@@ -1,7 +1,7 @@
 <!ENTITY feedbar.buttonLabel "Hírfolyamok">
 <!ENTITY feedbar.sidebarTitle "Hírfolyamok">
 <!ENTITY feedbar.buttonTooltip "Az Élő könyvjelzők megjelenítése az oldalsávon">
-<!ENTITY feedbar.accesskey "F">
+<!ENTITY feedbar.accesskey "Y">
 <!ENTITY feedbar.preview.markAsRead "Hírfolyam vagy elem megjelölése olvasottként">
 <!ENTITY feedbar.open "Megnyitás">
 <!ENTITY feedbar.openInTab "Megnyitás új lapon">
