--- a/feedsidebar/chrome/locale/nl-NL/locale.dtd
+++ b/feedsidebar/chrome/locale/nl-NL/locale.dtd
@@ -1,7 +1,7 @@
 <!ENTITY feedbar.buttonLabel "Feeds">
 <!ENTITY feedbar.sidebarTitle "Feeds">
 <!ENTITY feedbar.buttonTooltip "Toont de berichten van uw Livebladwijzers in de zijbalk">
-<!ENTITY feedbar.accesskey "F">
+<!ENTITY feedbar.accesskey "Y">
 <!ENTITY feedbar.preview.markAsRead "Feed of bericht als gelezen markeren">
 <!ENTITY feedbar.open "Openen">
 <!ENTITY feedbar.openInTab "In nieuw tabblad openen">
